Add ExperimentDesignData class with value annotati
on