@@ -6,9 +6,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.ac.ebi.atlas.trader.ExperimentDesignDao;
+import uk.ac.ebi.atlas.trader.ExperimentDesignData;
 import uk.ac.ebi.atlas.trader.ExperimentTrader;
 
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ThreadLocalRandom;
@@ -44,13 +44,10 @@ class ExperimentDesignTableServiceTest {
                 .thenReturn(Map.of("characteristic", ImmutableList.of("ch1"),
                         "factor", ImmutableList.of("fv1")));
         when(experimentDesignDaoMock.getExperimentDesignData(experiment.getAccession(), pageNo, pageSize*2))
-                .thenReturn(ImmutableList.of(
-                        new LinkedHashMap<>() {{
-                            put("characteristic", List.of("ch1"));
-                        }},
-                        new LinkedHashMap<>() {{
-                            put("factor", List.of("fv1"));
-                        }}
+                .thenReturn(ExperimentDesignData.of(
+                        Map.of("characteristic", List.of("ch1")),
+                        Map.of("factor", List.of("fv1")),
+                        Map.of()
                 ));
         when(experimentTraderMock.getExperiment(experiment.getAccession(), ""))
                 .thenReturn(experiment);
